--- a/theme/templates/page-index.html
+++ b/theme/templates/page-index.html
@@ -9,7 +9,7 @@
     .features li::marker {font-size: 1.5em;}
     .features li {margin-bottom: 1em;}
     .features li:last-child {margin-bottom: 0em;}
-    .features + p {margin-top: 1em;}
+    .description + p {margin-top: 1em;}
 
     main h1 {display: none}
     nav {margin-bottom: 4em;}
