Minor touchup copy

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -36,6 +36,7 @@
     <meta itemprop="alternateName" content="EF*CK">
     <meta itemprop="alternateName" content="EFUCK">
     <meta itemprop="alternateName" content="emoji keyboard">
+    <meta itemprop="sameAs" content="https://pypi.org/project/efck/">
     <meta itemprop="sameAs" content="https://github.com/efck-chat-keyboard">
     <meta itemprop="sameAs" content="https://github.com/efck-chat-keyboard/efck">
     <meta itemprop="url" content="/">
