Insert ads code

--- a/theme/templates/_analytics.html
+++ b/theme/templates/_analytics.html
@@ -6,5 +6,4 @@ gtag('js', new Date());
 gtag('config', 'G-JXD78DNM6S');
 </script>
 
-
-<!--<script async defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2900001379782823"></script>-->
+<!--<script async defer crossorigin src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2900001379782823"></script>-->
