--- a/theme/static/style.css
+++ b/theme/static/style.css
@@ -73,11 +73,8 @@ body {
     background: #eef;
     max-width: 57rem;
     margin: auto;
-
-    overflow-x: hidden;
 }
 :where(img) {max-width: 100%;}
-main {flex-grow: 1;}
 
 main > p,
 main .p p,
@@ -224,8 +221,11 @@ footer div {
 main {
     padding: 1em;
     line-height: 1.8em;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
+
+    overflow-x: clip;
 }
 
 :where(main a) {
