--- a/theme/static/style.css
+++ b/theme/static/style.css
@@ -14,6 +14,7 @@ div.screenshot {text-align: center;}
 .attribution span i {font-size: 1px; letter-spacing: -.5px; display:inline-block; transform: scale(.1); filter: blur(20px); zoom: .1}
 .signature {color:#ffe; margin:-2em auto; position: relative; right: -48vw;}
 @keyframes blink {0%{opacity:1} 50%{opacity:0} 100%{opacity:1}}
+@media (prefers-reduced-motion) { *, *:before, *:after {animation: none !important} }
 kbd {
     border: 1px solid #888;
     border-right-width: 3px;
