--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -74,7 +74,7 @@
         <p>{{ content_obj.quote }}</p>
         <div class="attribution"><span>M<i>ade</i></span> <span class="with">w<i>ith</i></span> <i class="heart" aria-label="love" role="img">♥</i> 41 <span>NV</span>
         </div>
-        <span class="signature">&#21328;</span>
+        <span class="signature" style="color:#ffe">&#21328;</span>
     </footer>
     {% block foot %}{% endblock %}
 </body>
